# master-thesis

./: .gitignore  .prettierrc  README.md
backend/: README.md  main.py  pyproject.toml
backend/data/: create_table.ipynb  duckdb-test.db
backend/src/: consts.py  download_files_logic.py  process_data_logic.py
backend/src/sql/: __init__.py  ddl.py  dml.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: calculatedWay.json  calculatedWay2.json
frontend/src/: figures.slice.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/entity/: aStar.tsx
frontend/src/entity/grid/: types.ts
frontend/src/entity/grid/lib/: calculateDistance.ts  isPointInPolygon.ts
frontend/src/shared/: Greed.ts
frontend/src/shared/Map/: AuthForm.tsx  CustomMarker.tsx  CustomMarkerView.tsx  Figure.tsx  Map.module.css  MapControlLayer.tsx  Markers.tsx  Way.tsx  gridUtils.ts  handlers.ts
src/: figures.slice.ts  store.tsx
src/app/: page.tsx
src/components/MainMenu/: MainMenu.tsx
src/entity/: MenuItem.ts  aStar.tsx
src/entity/grid/: types.ts
src/entity/grid/lib/: generateGrid.ts
src/shared/Grid/: Grid.tsx
src/shared/Map/: CustomMarker.tsx  Figure.tsx  Map.tsx  MapComponent.tsx  MapControlLayer.tsx  Markers.tsx  handlers.ts  leeAlgorithm.ts
src/shared/Menu/: Menu.tsx
