[project]
name = "diplom-2023-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chdb>=3.2.0",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "proj>=0.2.0",
    "pyproj>=3.7.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "st-dbscan>=0.2.3",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
